testData/inspections/inspectionSuppressor/suppressedForFileAfterFirstInstruction.s
  tst.l d0
  
*  @@@suppress_inspection@@@ M68kUnresolvedLabelReference

<error descr="Missing matching 'endm' closing directive">brokenMacro macro</error>

 bra <error descr="Cannot resolve label 'INVALID_VALUE'">INVALID_VALUE</error>
